2013-12-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (direntry): Use ssh but rsh.
	(all): Encode all environment variable names with @env{...}.
	(Bug Reports): Refer to Testing node.

2013-12-12  Glenn Morris  <rgm@gnu.org>

	* autotype.texi, cc-mode.texi, ediff.texi, ert.texi:
	* htmlfontify.texi, ido.texi, octave-mode.texi, org.texi:
	* srecode.texi, todo-mode.texi, tramp.texi:
	Sync direntry with info/dir version.

2013-12-11  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>

	* Makefile.in: Add octave-mode.texi.

2013-12-11  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>
	    Rüdiger Sonderfeld  <ruediger@c-plusplus.de>

	* octave-mode.texi: Import from GNU Octave (doc/interpreter/emacs.txi).

2013-12-08  Juanma Barranquero  <lekktu@gmail.com>

	* dbus.texi (Properties and Annotations): Fix typo.

2013-12-06  Bastien Guerry  <bzg@gnu.org>

	* org.texi: Don't include Emacs version within Org's version.

2013-12-06  Nicolas Goaziou  <n.goaziou@gmail.com>

	* org.texi (Creating one-off styles): Use new export snippet
	syntax.

	* org.texi (Export settings): documentation describing how text
	above the first heading is ignored when an :export: tag is in a
	file.

2013-12-05  Michael Albinus  <michael.albinus@gmx.de>

	* dbus.texi (Type Conversion): Clarify unibyte-ness of strings.

2013-11-30  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (distclean): Remove Makefile.

2013-11-20  era eriksson  <era+emacsbugs@iki.fi>

	* ses.texi (Quick Tutorial): New chapter.  (Bug#14748)
	(The Basics, Formulas): Copyedits.
	(Resizing, Printer functions): Add index entries.

2013-11-17  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc.texi (Customizing Calc): Mention new variable
	`calc-context-sensitive-enter'.

2013-11-12  Aaron Ecay  <aaronecay@gmail.com>

	* org.texi (Exporting code blocks): Document the 'inline-only
	setting for `org-export-babel-evaluate'.  Document how :var
	introduces code block dependencies.

2013-11-12  Achim Gratz  <Stromeko@Stromeko.DE>
