@@ -1,3 +1,8 @@
+2013-12-20  Jay Belanger  <jay.p.belanger@gmail.com>
+
+	* calc/calc.el (calc-enter, calc-pop): Use the variable
+	`calc-context-sensitive-enter'.
+
 2013-12-20  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* net/shr.el (shr-insert): Protect against infloops in degenerate
