@@ -1,3 +1,8 @@
+2013-12-20  Jay Belanger  <jay.p.belanger@gmail.com>
+
+	* calc.texi (Stack Manipulation Commands): Mention using the variable
+	`calc-context-sensitive-enter' for `calc-enter' and `calc-pop'.
+
 2013-12-12  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.texi (direntry): Use ssh but rsh.
